tutorial/level_2/M1_cicd/3_openshift_gitops_argocd/manifests/kustomize-example/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitops-sample-app
  template:
    metadata:
      labels:
        app: gitops-sample-app
    spec:
      containers:
        - name: app
          image: quay.io/redhatworkshops/gitops-sample-app:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
