tutorial/level_2/M1_cicd/3_openshift_gitops_argocd/manifests/kustomize-example/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-sample-app
spec:
  selector:
    app: gitops-sample-app
  ports:
    - port: 8080
      targetPort: 8080
