tutorial/level_2/M1_cicd/3_openshift_gitops_argocd/manifests/kustomize-example/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitops-sample-app
spec:
  to:
    kind: Service
    name: gitops-sample-app
  port:
    targetPort: 8080
  tls:
    termination: edge
